2011-01-20  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (xtick_callback ytick_callback ztick_callbacke):
	Revert change made 2011-01-20 because it breaks hidden3d.

	* src/util3d.c (map3d_xy_double):  Instead revise the map3d_xy() code
	path to share the coordinate transformation used by map3d_xyz().
	Bug #3157712

2011-01-22  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* src/win/wgraph.c:  Fix typo in previous definition of _WIN32_WINNT.

2011-01-21  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (plot_boxplot):  Handle some corner cases
	(all points have the same value, fewer than 4 valid points).
	Bug #3162872

2011-01-20  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (xtick_callback ytick_callback ztick_callbacke):
	Gnuplot uses two different pathways to convert 3D coordinates in user
	space into 2D coordinates in the terminal coordinate space.  One of
	these goes via map3d_xyz() and TERMCOORD(); the other uses map3d_xy().
	Unfortunately it seems the two paths can differ by +/- one pixel in the
	final terminal coordinates.  This discrepancy is particularly
	noticeable in the grid and axis tic placement of 3D plots after
	"set view map" (Bug #3157712).
	This patch switches the tick_callback() routines to use the map3d_xy()
	pathway, which fixes the problem case described by the bug report.
	It would be to make both pathways share the same underlying code
	so that the discrepancy doesn't occur in other conditions.
	Bug #3157712

2011-01-19  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (place_raxis): If the polar axis maximum is autoscaled,
	draw the raxis all the way to that maximum value.
	Bug #3153406

	* term/post.trm: Replace a use-once character array by a literal string.

2011-01-18  Mojca Miklavec  <mojca.miklavec.lists@gmail.com>

	* src/wxterminal/gp_cairo.c:  Cast size_t arguments to (int).

2011-01-17  Shigeharu Takeno  <shige@iee.niit.ac.jp>
