@@ -1,4 +1,4 @@
-C RCS $Id: gnuplot.doc,v 1.646 2011/01/03 14:30:31 juhaszp Exp $
+C RCS $Id: gnuplot.doc,v 1.647 2011/01/16 19:15:20 sfeam Exp $
 C
 C Copyright (C) 1986 - 1993, 1998, 1999, 2000, 2001, 2004   Thomas Williams, Colin Kelley et al.
 C
@@ -7496,6 +7496,7 @@ Ffigure_mapcontours
 ?encoding
 ?encodings
 =UTF-8
+=SJIS
  The `set encoding` command selects a character encoding.
  Syntax:
        set encoding {<value>}
@@ -7519,6 +7520,7 @@ Ffigure_mapcontours
     cp1250      - codepage for MS Windows, Central and Eastern Europe
     cp1251      - codepage for 8-bit Russian, Serbian, Bulgarian, Macedonian
     cp1254      - codepage for MS Windows, Turkish (superset of Latin5)
+    sjis        - shift-JIS Japanese encoding (postscript and svg only)
     utf8        - variable-length (multibyte) representation of Unicode
                   entry point for each character
 
