@@ -1,5 +1,5 @@
 /* Hello, Emacs, this is -*-C-*-
- * $Id: svg.trm,v 1.105 2010/07/29 20:45:11 sfeam Exp $
+ * $Id: svg.trm,v 1.106 2010/10/06 05:44:57 sfeam Exp $
  */
 
 /*------------------------------------------------------------------------------------------------------------------------------------
@@ -680,6 +680,7 @@ SVG_init ()
 	case S_ENC_CP1251:	svg_encoding = "encoding=\"windows-1251\" "; break;
 	case S_ENC_KOI8_R:	svg_encoding = "encoding=\"koi8-r\" "; break;
 	case S_ENC_KOI8_U:	svg_encoding = "encoding=\"koi8-u\" "; break;
+	case S_ENC_SJIS:	svg_encoding = "encoding=\"Shift_JIS\" "; break;
 	case S_ENC_CP437:	svg_encoding = ""; break;
 	default: /* UTF-8 */
 				svg_encoding = "encoding=\"utf-8\" ";
